<resources>
    <string name="app_name">FreeSpace</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_freunde">Freunde</string>
    <string name="title_activity_freundesliste">Freundesliste</string>
    <string name="title_activity_login">Anmelden</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="user_name">Thomas Siepmann</string>
    <string name="thomas_siepman_fhaachen_de">thomas.siepmann@fhaachen.de</string>
    <string name="user_email">thomas.siepmann@fhaachen.de</string>
    <string name="home">Home</string>
    <string name="rooms">Räume</string>
    <string name="friendlist">Freundesliste</string>
    <string name="settings">Einstellungen</string>
    <string name="getMaster">Professor</string>
    <string name="timetable">Veranstaltungen</string>
    <string name="profile_pic">Profilbild</string>
    <string name="title_activity_room">Räume suchen</string>
    <string name="rooms_filter">Raumfilter</string>
    <string name="empty_rooms">Nur Leere Räume</string>
    <string name="filter_friends">Räume mit Freunden</string>
    <string name="clickable_tags">Tags</string>
    <string name="title_activity_filter_tags">Tags filtern</string>
    <string name="title_activity_set_tags">Tag setzen</string>
    <string name="title_activity_settings2">Einstellungen</string>
    <string name="title_activity_active_session">FreeSpace</string>
    <string name="qrscan">QR Scanner</string>

    <string name="people_in_room_label">Leute im Raum:</string>
    <string name="session_quit">Sitzung Beenden</string>
    <string name="session_renew">Sitzung erneuern</string>
    <string name="session_active_until">Sitzung aktiv bis:</string>
    <string name="session_active_until_clock">%1$s Uhr</string>
    <plurals name="people_in_room_cnt_anon">
        <item quantity="one">(%d Anonymer)</item>
        <item quantity="other">(%d Anonyme)</item>
    </plurals>
    <string name="people_in_room_cnt">%1$d/%2$d %3$s</string>
    <string name="tag_label">Tag:</string>
    <string name="set_tag">Tag setzen</string>
    <string name="room_number">%1$s</string>
    <string name="tag">%1$s</string>
    <string name="errormsgTitle">"Fehler %d"</string>
    <string name="versioncode">"FreeSpace Version %1$s-%2$d</string>



    <string name="title_text">Willkommen bei FreeSpace</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Angemeldet als: %s</string>
    <string name="signed_in">Angemeldet</string>
    <string name="signing_in">Anmelden…</string>
    <string name="signed_out">Bitte melde dich mit deinem Google-Konto an, um die App nutzen zu können.</string>
    <string name="signed_in_err">"Fehler: Bitte Logs überprüfen."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Lade…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="server_client_id">760784726366-8bfr5vfcr4c1ak5k2h3ovk664ii6p7oj.apps.googleusercontent.com</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Abmelden</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="img_room_photo_content">Bild vom Raum</string>
    <string name="btn_goto_text">Gehe zu</string>
    <string name="noTag">Kein Tag gesetzt</string>
    <string name="professor">Professor</string>
    <string name="lectures">Veranstaltungen</string>
</resources>