<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_raeume"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/rooms" />
        <item
            android:id="@+id/nav_freundesliste"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/friendlist" />
        <item
            android:id="@+id/nav_einstellungen"
            android:icon="@drawable/ic_settings_black_24px"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/professor"
        android:id="@+id/nav_professor">
        <menu>
            <item
                android:id="@+id/nav_professor_stundenplan"
                android:icon="@drawable/ic_date_range_black_24dp"
                android:title="@string/lectures" />
        </menu>
    </item>

</menu>
